# mailfmt

./: Cargo.toml  README.md
src/: eml.rs  main.rs  mbox.rs
