[package]
name = "mailfmt"
description = "A simple and quick bidirectional converter between mbox and eml formats."
authors = ["Blooym"]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
indicatif = "0.18.3"
sanitize-filename = "0.6.0"
